# IO_Maid

./: AGENTS.md  README.md  generate_report.py  pyproject.toml
config/: default_config.json
src/io_maid/: __main__.py  classifier.py  cli.py  config.py  mover.py  organizer.py
src/io_maid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_classifier.py  test_cli.py  test_config.py  test_mover.py  test_organizer.py
